--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,38 +1,79 @@
 <!doctype html>
 <html>
   <head>
-    <title>Members only message board</title>
+    <title>Clubhouse Board</title>
     <link rel="stylesheet" href="/stylesheets/style.css" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
   </head>
   <body>
-    <div class="min-h-full">
-      <nav class="bg-gray-800">
-        <div
-          class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8 flex h-16 items-center justify-between"
-        >
-          <a href="/">
-            <h1 class="flex-shrink-0 text-white sm:text-2xl text-sm">
-              Clubhouse
-            </h1>
-          </a>
-          <div class="ml-10 flex items-baseline space-x-4">
-            <% if (!isAuthenticated) { %>
-            <a
-              href="/register"
-              class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium"
-              >Register</a
-            >
-            <a
-              href="/login"
-              class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium"
-              >Log In</a
-            >
-            <% } else { %>
-            <form action="/logout" method="post">
-              <button class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium" type="submit">Sign out</button>
-            </form>
-            <% } %>
+    <div class="flex justify-center w-screen h-screen px-4 text-gray-900">
+      <div class="flex mx-auto w-full max-w-screen-lg">
+        <div class="flex flex-col w-64 py-4 pr-3">
+          <div class="flex flex-row justify-start border-b-2">
+              <img
+                class="flex-shrink-0 w-10 h-10"
+                src="/images/icon.svg"
+                alt="Site icon"
+              />
+            <h1 class="py-2 px-2 text-2xl font-bold">Quitter</h1>
           </div>
+          <a
+            class="px-3 py-2 mt-2 text-md font-medium order-3 rounded-sm hover:bg-gray-300"
+            href="/"
+            >Home</a
+          >
+          <% if (isAuthenticated) { %>
+            <% if (!user.isMember) { %>
+            <a
+              class="px-3 py-2 mt-2 text-md font-medium order-3 rounded-sm hover:bg-gray-300"
+              href="join"
+              >Become a member</a
+            >
+            <% } %>
+          <form action="/logout" class="order-last" method="post">
+            <button
+              type="submit"
+              class="w-full flex px-3 py-2 mt-2 text-md rounded-sm font-medium hover:bg-gray-200"
+            >
+              <img
+                class="flex-shrink-0 w-10 h-10"
+                src="/images/user.svg"
+                alt="User icon"
+              />
+              <div class="flex flex-col ml-2">
+                <span
+                  class="mt-1 text-sm font-semibold flex flex-row items-center"
+                >
+                  <span class="align-text-bottom"> <%= user.username %> </span>
+                  <% if (user.isMember) { %>
+                  <img
+                    class="flex-shrink-0 w-3 h-3 ml-1"
+                    src="/images/check-mark.svg"
+                    alt="Member symbol"
+                    title="Member of the club"
+                  />
+                  <% } %>
+                </span>
+                <span class="text-xs text-gray-600">Log out</span>
+              </div>
+            </button>
+          </form>
+          <% } else { %>
+          <a
+            class="px-3 py-2 mt-2 text-md font-medium rounded-sm text-white order-1 text-bold bg-indigo-600 hover:bg-indigo-700"
+            href="/register"
+            >Sign Up</a
+          >
+          <a
+            class="px-3 py-2 mt-2 text-md order-2 font-medium rounded-sm bg-gray-200 hover:bg-gray-300"
+            href="/login"
+            >Log In</a
+          >
+          <% } %>
         </div>
-      </nav>
-      <main class="m-8">
