--- a/views/registerform.ejs
+++ b/views/registerform.ejs
@@ -1,65 +1,65 @@
 <%- include('./partials/header') %>
 <div
-  class="flex flex-col flex-grow border-l border-r border-gray-300 sm:max-w-screen-sm mx-auto"
+    class="mx-auto flex flex-grow flex-col border-l border-r border-gray-300 sm:max-w-screen-sm"
 >
-  <form method="post" action="/register">
-    <h2 class="pb-2 text-base font-semibold text-gray-900 border-b-4 p-8">
-      Register
-    </h2>
+    <form method="post" action="/register">
+        <h2 class="border-b-4 p-8 pb-2 text-base font-semibold text-gray-900">
+            Register
+        </h2>
 
-    <div class="pb-8 px-3 flex flex-col">
-      <div class="my-2">
-        <label
-          for="username"
-          class="block text-sm font-medium leading-6 text-gray-900"
+        <div class="flex flex-col px-3 pb-8">
+            <div class="my-2">
+                <label
+                    for="username"
+                    class="block text-sm font-medium leading-6 text-gray-900"
+                >
+                    Username
+                </label>
+                <input
+                    type="text"
+                    name="username"
+                    id="username"
+                    class="mt-2 block w-full rounded-sm border-0 px-2 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 valid:ring-blue-500 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
+                    required
+                />
+            </div>
+            <div class="my-2">
+                <label
+                    for="password"
+                    class="block text-sm font-medium leading-6 text-gray-900"
+                    >Password</label
+                >
+                <input
+                    type="password"
+                    name="password"
+                    id="password"
+                    class="mt-2 block w-full rounded-sm border-0 px-2 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 valid:ring-blue-500 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
+                    required
+                />
+            </div>
+            <div class="my-2">
+                <label
+                    for="passwordconfirm"
+                    class="block text-sm font-medium leading-6 text-gray-900"
+                >
+                    Confirm Password
+                </label>
+                <input
+                    type="password"
+                    name="passwordconfirm"
+                    id="passwordconfirm"
+                    class="mt-2 block w-full rounded-sm border-0 px-2 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 valid:ring-blue-500 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
+                    required
+                />
+            </div>
+        </div>
+        <button
+            type="submit"
+            class="ml-3 rounded-sm bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-700 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600"
         >
-          Username
-        </label>
-        <input
-          type="text"
-          name="username"
-          id="username"
-          class="block w-full rounded-sm border-0 mt-2 py-1.5 px-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 valid:ring-blue-500 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
-          required
-        />
-      </div>
-      <div class="my-2">
-        <label
-          for="password"
-          class="block text-sm font-medium leading-6 text-gray-900"
-          >Password</label
-        >
-        <input
-          type="password"
-          name="password"
-          id="password"
-          class="block w-full rounded-sm border-0 mt-2 py-1.5 px-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 valid:ring-blue-500 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
-          required
-        />
-      </div>
-      <div class="my-2">
-        <label
-          for="passwordconfirm"
-          class="block text-sm font-medium leading-6 text-gray-900"
-        >
-          Confirm Password
-        </label>
-        <input
-          type="password"
-          name="passwordconfirm"
-          id="passwordconfirm"
-          class="block w-full rounded-sm border-0 mt-2 py-1.5 px-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 valid:ring-blue-500 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
-          required
-        />
-      </div>
-    </div>
-    <button
-      type="submit"
-      class="ml-3 rounded-sm bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-700 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600"
-    >
-      Register
-    </button>
-  </form>
-  <script src="/scripts/check-password-match.js"></script>
+            Register
+        </button>
+    </form>
+    <script src="/scripts/check-password-match.js"></script>
 </div>
 <%- include('./partials/footer') %>
