add flash to index

--- a/views/joinform.ejs
+++ b/views/joinform.ejs
@@ -2,7 +2,7 @@
 <div
     class="mx-auto flex flex-grow flex-col border-l border-r border-gray-300 sm:max-w-screen-sm"
 >
-    <form method="post" action="/join">
+    <form method="post" action="/becomemember">
         <h2 class="border-b-4 p-8 pb-2 text-base font-semibold text-gray-900">
             Enter the <i>secret</i> password to become a member
         </h2>
