--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -29,7 +29,7 @@
         <div class="flex h-screen w-screen justify-center px-4 text-gray-900">
             <div class="mx-auto flex w-full max-w-screen-lg">
                 <div class="flex w-64 flex-col py-4 pr-3">
-                    <div class="flex flex-row justify-start border-b-2">
+                    <div class="flex flex-row flex-wrap justify-start border-b-2">
                         <img
                             class="h-10 w-10 flex-shrink-0"
                             src="/images/icon.svg"
