--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,6 +3,32 @@
     class="mx-auto flex flex-grow flex-col border-l border-r border-gray-300 sm:max-w-screen-sm"
 >
     <div class="flex-grow overflow-auto">
+
+        <% if (errorMessages.length > 0) { %>
+        <div
+            class="relative border-b-2 border-red-400 bg-red-200 px-4 py-3 text-red-700"
+            role="alert"
+        >
+            <ul>
+                <% errorMessages.forEach((message) => { %>
+                <li><%= message %></li>
+                <% }) %>
+            </ul>
+        </div>
+        <% } %>
+        <% if (infoMessages.length > 0) { %>
+        <div
+            class="relative border-b-2 border-sky-400 bg-sky-200 px-4 py-3 text-sky-700"
+            role="alert"
+        >
+            <ul>
+                <% infoMessages.forEach((message) => { %>
+                <li><%= message %></li>
+                <% }) %>
+            </ul>
+        </div>
+        <% } %>
+
         <% if (isAuthenticated) { %>
         <h2 class="border-b-2 p-8 pb-2 text-base font-semibold text-gray-900">
             Make a post
